--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" [attr.data-theme]="themeService.theme().color">
+
 <head>
   <meta charset="utf-8">
   <title>BoiteARef</title>
@@ -7,8 +8,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script async src="https://www.tiktok.com/embed.js"></script>
+  <script>
+    (function () {
+      const theme = localStorage.getItem('theme');
+      if (theme) {
+        const parsedTheme = JSON.parse(theme);
+        document.documentElement.className = parsedTheme.mode;
+        document.documentElement.setAttribute('data-theme', parsedTheme.color);
+      }
+    })();
+  </script>
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
